Aisha Blake: Web Accessibility Compliance

--- a/courses.html
+++ b/courses.html
@@ -93,6 +93,12 @@
         is a 6-week course by the Georgia Institute of Technology (Georgia Tech) hosted on edX. The course requires 2 to 4 hours of study per week.
         The latest session started on 29.02.2016; the course is now available as a self-paced course.
       </li>
+      <li>
+        <a href="https://teamtreehouse.com/library/web-accessibility-compliance">Web Accessibility Compliance</a>
+        by Aisha Blake is a course hosted on Treehouse.
+        It is described as a <q>124-minute Development Tools Course</q>.
+        (Access to Treehouse requires a monthly subscription.)
+      </li>
       <!--
       <li>
         <a href="https://www.coursera.org/course/digitalaccessibility">Information and Communication Technology (<abbr>ICT</abbr>) Accessibility</a>
