Update on Discapacidad y envejecimiento activos

--- a/courses.html
+++ b/courses.html
@@ -268,6 +268,9 @@
         is an 11-week course by the <span lang="es">Universidad Complutense Madrid</span> on MiriadaX
         that requires roughly 66 hours of study. It does not require previous knowledge of accessibility or disability.
         The first run of the course started in January 2017; the second run was scheduled from 20 March to 12 June 2017.
+        The
+        <a href="https://miriadax.net/web/discapacidad-y-envejecimiento-activo-soportes-tecnologicos-2-edicion-/inicio">second run of the course</a>
+        is eight weeks long and started on 18 March 2019.
       </li>
       <li>
         <a href="https://www.futurelearn.com/courses/autism">Understanding Autism</a>
