Adam: Building Accessible Buttons ...

--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -170,6 +170,10 @@
         Heydon Pickering's <a href="https://github.com/Heydon/REVENGE.CSS">Revenge.css</a>
         and <abbr>CAST</abbr> Figuration.
       </li>
+      <li>Foskett, Mike:
+        <a href="https://codepen.io/2kool2/pen/kXVKKb">Animated <abbr>ARIA</abbr> hamburger menu</a>.
+        This menu aims to meet <abbr>WCAG</abbr> 2 Level AA and is available on codepen.io.
+      </li>
     </ul>
 
     <h3><abbr>CAST</abbr> Figuration</h3>
