--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -174,6 +174,10 @@
         <a href="https://codepen.io/2kool2/pen/kXVKKb">Animated <abbr>ARIA</abbr> hamburger menu</a>.
         This menu aims to meet <abbr>WCAG</abbr> 2 Level AA and is available on codepen.io.
       </li>
+      <li>Adam, Paul J.:
+        <a href="https://www.deque.com/blog/accessible-aria-buttons/">Building Accessible Buttons with <abbr>ARIA</abbr>: <abbr>A11y</abbr> Support Series</a>,
+        <i class="blog">Deque Blog</i>, 28.09.2016.
+      </li>
     </ul>
 
     <h3><abbr>CAST</abbr> Figuration</h3>
