--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -253,6 +253,15 @@
         <abbr>HTML</abbr> validation, validation against <abbr>WCAG</abbr> and the <abbr>US</abbr> Section 508 requirements,
         checking for broken links, and spell checking for a small set of languages (English, French, Italian, Spanish and German).
       </li>
+      <li>
+        <a href="https://open-indy.github.io/Koa11y/">Ko<abbr>a11y</abbr></a>:
+        <q>a desktop app that allows you to automatically detect accessibility (a11y) issues on webpages.</q>
+        It runs on Linux, Windows (<abbr>XP</abbr> or more recent) and Mac <abbr>OS</abbr>.
+        The tool was created using <a href="http://pa11y.org">Pa11y</a>, <a href="http://vuejs.org">Vue.js</a> and <a href="http://nwjs.io">NW.js</a>.
+        The
+        <a href="https://github.com/open-indy/Koa11y">Ko<abbr>a11y</abbr> source code</a>
+        is available on GitHub under the terms of the <abbr>MIT</abbr> licence.
+      </li>
     </ul>
 
     <p>Other tools:</p>
