MacDonald: Test header and footer

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -248,6 +248,11 @@
         <a href="http://www.anysurfer.be/nl/blog/detail/pleidooi-van-een-screenreadergebruiker-overdrijf-niet" hreflang="nl" lang="nl">Pleidooi van een screenreadergebruiker: overdrijf niet</a>,
         <i class="website">AnySurfer</i>, 11.07.2018.
       </li>
+      <li>MacDonald, David:
+        <a href="http://davidmacd.com/blog/header-footer-in-section-element.html">Test header and footer</a>,
+        <i class="blog">CanAdapt / David MacDonald Accessibility Blog</i> (no date; not earlier than 2015).
+        This blog posts reports on screen reader support for the <code>header</code> element.
+      </li>
     </ul>
 
     <h2>Page Structure</h2>
