--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -253,6 +253,10 @@
         <i class="blog">CanAdapt / David MacDonald Accessibility Blog</i> (no date; not earlier than 2015).
         This blog posts reports on screen reader support for the <code>header</code> element.
       </li>
+      <li><span lang="de">Hellbusch, Jan:
+        <a href="https://www.hellbusch.de/landmarks/" hreflang="de">Landmarks mit <abbr>ARIA</abbr> und <abbr>HTML</abbr></a>,
+        <i class="website">hellbusch.de</i></span>, 22.07.2016.
+      </li>
     </ul>
 
     <h2>Page Structure</h2>
