Bracey: How to Use the Contrast Checker in Chrome DevTools

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -494,6 +494,10 @@
         <a href="http://www.gimp.org/"><abbr title="GNU Image Manipulation Program">GIMP</abbr></a> 
         plugin that simulates different colour vision deficiencies. 
       </li>
+      <li>Bracey, Kezz:
+        <a href="https://webdesign.tutsplus.com/articles/how-to-use-the-contrast-checker-in-chrome-devtools--cms-31504">How to Use the Contrast Checker in Chrome DevTools</a>,
+        <i class="website">Envato Tuts+</i>, 22.10.2018.
+      </li>
     </ul>
 
     <h2>Articles about Automated Accessibility Evaluation</h2>
