--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -578,6 +578,16 @@
         <a href="https://github.com/Heydon/REVENGE.CSS">REVENGE.CSS</a>:
         <q>A <abbr>CSS</abbr> bookmarklet that puts pink error boxes (with messages in comic sans) everywhere you write bad <abbr>HTML</abbr></q>.
       </li>
+      <li>
+        <a href="https://developers.google.com/web/tools/lighthouse/">Lighthouse</a>:
+        open-source tool by Google for <q>improving the quality of web pages</q>.
+        It is part of the Chrome DevTools, which are available in Google Chrome and Chromium;
+        they can also be run from the command line or as a Node module.
+        Among other things, it performs accessibility audits.
+        The
+        <a href="https://github.com/GoogleChrome/lighthouse">Lighthouse source code</a>
+        is available on GitHub under the terms of the Apache 2.0 licence.
+      </li>
       <!--
       <li>
         <a href=""></a>
