--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="alternate stylesheet" type="text/css" media="screen" href="css/meiert-qa.css" title="QA stylesheet" />
   <!-- See quick intro to GitHub pages at https://pages.github.com/ -->
   <!-- See also https://help.github.com/articles/user-organization-and-project-pages/ -->
+  <link rel="license" href="LICENCE.html" /><!-- license rel, see https://www.w3.org/TR/html5/links.html#sec-link-types -->
   <meta name="robots" content="noindex, nofollow" />
   <meta name="googlebot" content="noindex, nofollow" />
 </head>
