--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -219,6 +219,12 @@
       <li><a href="http://captiontube.appspot.com/">CaptionTube</a>
         (YouTube's do-it-yourself captioning software).
       </li>
+      <li><abbr>WGBH</abbr>:
+        <a href="http://ncamftp.wgbh.org/cadet/"><abbr>CADET</abbr>: Caption And Description Editing Tool</a>.
+        According to the description on the website<!--13.09.2019-->,
+        <q><abbr>CADET</abbr> is free, downloadable caption-authoring software that enables anyone to produce high-quality caption files that are compatible with any media player that supports the display of captions.
+        <abbr>CADET</abbr> can also be used to generate audio-description scripts.</q>
+      </li>
       <li><a href="http://dotsub.com/">dotSUB</a>
       </li>
       <li>
