Egger: Mit Screenreadern testen (1): Zitatauszeichnung

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -262,6 +262,10 @@
         <i class="blog">MEJSullivan – Learnings and Links</i>, 08.05.2015.
         (This resource is based on a blog named <i class="blog">Unobfuscated</i> that no longer exists.)
       </li>
+      <li><span lang="de">Egger, Sylvia:
+        <a href="https://sprungmarker.de/2010/mit_screenreadern_testen_1_zitatauszeichung/" hreflang="de">Mit Screenreadern testen (1): Zitatauszeichnung</a>,
+        <i class="blog">Spungmarker</i></span>, 28.02.2010.
+      </li>
       <li><span lang="de">Hellbusch, Jan:
         <a href="https://www.hellbusch.de/landmarks/" hreflang="de">Landmarks mit <abbr>ARIA</abbr> und <abbr>HTML</abbr></a>,
         <i class="website">hellbusch.de</i></span>, 22.07.2016.
