Faulkner: Short update on multiple labels for [input]

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -553,6 +553,15 @@
         <a href="https://blog.whatwg.org/the-state-of-fieldset-interoperability">The state of fieldset interoperability</a>,
         <i class="blog">The <abbr title="Web Hypertext Application Technology Working Group">WHATWG</abbr> Blog</i>, 19.09.2018.
       </li>
+      <li>Faulkner, Steve:
+        <a href="https://codepen.io/stevef/post/short-update-on-multiple-labels-for">Short update on multiple labels for </a>,
+        <i class="website">steve faulkner on CodePen</i>, 22.08.2019.
+        <br />Conclusion:
+        <q><strong>Do not</strong> provide multiple labels for a control using the <code>label</code> element.
+        Although it has been possible, as per the <abbr>HTML</abbr> specification, for many years, this technique is simply not well supported and may never be.</q>
+        As an alternative to using multiple labels, you can wrap the <code>label</code> element around the form control
+        or use the <code>aria-labelledby</code> attribute.
+      </li>
     </ul>
 
     <h2 id="captcha"><abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart">CAPTCHA</abbr></h2>
