blockquote should be inside main element

--- a/disabilities/learning-difficulties.html
+++ b/disabilities/learning-difficulties.html
@@ -18,21 +18,21 @@
     <h1><span class="h1txt">Learning Difficulties</span></h1>
   </header>
 
-  <blockquote id="introquote">
-    <p>"Disability" is a weird kind of line they draw.<br />
-      If you never look at it, you're certain it's a solid, straight line.<br />
-      If you glance at it, it's really pretty fuzzy.<br />
-      If you stare at it, it's lots of lines. Jagged, and in 3D.<br />I
-      Focus on it for a lifetime and it disappears completely.</p>
-    <p><cite><a href="https://twitter.com/mattmay/status/996817494546440192">Matt May on Twitter, 16.05.2018</a></cite>
-  </blockquote>
-
   <!-- @@todo add nav
   <nav>
   </nav>
   -->
 
   <main>
+    <blockquote id="introquote">
+      <p>"Disability" is a weird kind of line they draw.<br />
+        If you never look at it, you're certain it's a solid, straight line.<br />
+        If you glance at it, it's really pretty fuzzy.<br />
+        If you stare at it, it's lots of lines. Jagged, and in 3D.<br />
+        Focus on it for a lifetime and it disappears completely.</p>
+      <p><cite><a href="https://twitter.com/mattmay/status/996817494546440192">Matt May on Twitter, 16.05.2018</a></cite>
+    </blockquote>
+
     <p><strong>Note</strong>: the term &ldquo;learning disability&rdquo; means different things in 
       different parts of the world (see <a href="#dyslexia">below</a>).
       The Learning Disabilities Association of America (<abbr>LDA</abbr>) lists the following 
@@ -139,6 +139,7 @@
         <i class="website"><abbr>NPR</abbr></i>, 11.03.2018.
       </li>
     </ul>
+    <!-- Diagnostic substitution: https://en.wikipedia.org/wiki/Diagnostic_substitution -->
   </main>
 
   <footer>
