--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -274,8 +274,7 @@
         <a href="https://www.w3.org/TR/coga-gap-analysis/">Cognitive Accessibility Roadmap and Gap Analysis</a>.
       </li>
       <li><abbr>W3C</abbr>:
-        <a href="http://www.w3.org/TR/ATAG20/">Authoring Tool Accessibility 
-        Guidelines (<abbr>ATAG</abbr>) 2.0</a>:
+        <a href="http://www.w3.org/TR/ATAG20/">Authoring Tool Accessibility Guidelines (<abbr>ATAG</abbr>) 2.0</a>:
         guidelines for tools that produce web content, such as 
         <abbr title="what you see is what you get">WYSIWYG</abbr> <abbr>HTML</abbr>
         editors, web content management systems, software for creating mobile
@@ -285,15 +284,12 @@
         for the content produced with such tools.
       </li>
       <li><abbr>W3C</abbr>:
-        <a href="http://www.w3.org/TR/UAAG20/">User Agent Accessibility Guidelines 
-        (<abbr>UAAG</abbr>) 2.0</a>:
+        <a href="http://www.w3.org/TR/UAAG20/">User Agent Accessibility Guidelines (<abbr>UAAG</abbr>) 2.0</a>:
         guidelines for web browsers and similar applications (including media 
         players and browser extensions) that render web content.
       </li>                     
       <li><abbr>W3C</abbr>:
-        <a href="http://www.w3.org/TR/wai-aria/">Accessible Rich Internet 
-        Applications (<abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr>) 
-        1.0</a>:
+        <a href="http://www.w3.org/TR/wai-aria/">Accessible Rich Internet Applications (<abbr title="Accessible Rich Internet Applications">WAI-ARIA</abbr>) 1.0</a>:
         specification of an ontology of roles, states and properties that can be
         used to improve the accessibility of web applications.<br />
         This document is part of a suite of documents. The best starting point
@@ -303,14 +299,12 @@
         are especially important:
         <ul>
           <li>
-            <a href="http://www.w3.org/TR/wai-aria-primer/"><abbr>WAI-ARIA</abbr> 
-            1.0 Primer: An introduction to rich Internet application accessibility 
-            challenges and solutions</a>.
+            <a href="http://www.w3.org/TR/wai-aria-primer/"><abbr>WAI-ARIA</abbr> 1.0 Primer:
+            An introduction to rich Internet application accessibility challenges and solutions</a>.
           </li>
           <li>
-            <a href="http://www.w3.org/TR/wai-aria-practices/"><abbr>WAI-ARIA</abbr> 
-            1.0 Authoring Practices: An author's guide to understanding and implementing 
-            Accessible Rich Internet Applications</a>.
+            <a href="http://www.w3.org/TR/wai-aria-practices/"><abbr>WAI-ARIA</abbr> 1.0 Authoring Practices:
+            An author's guide to understanding and implementing Accessible Rich Internet Applications</a>.
           </li>
         </ul>
       </li>
@@ -330,11 +324,16 @@
         <a href="https://github.com/DISIC/rgaa_referentiel_en"><abbr>RGAA</abbr> Guidelines</a>.
       </li>
       <li>United Nations: 
-        <a href="http://www.un.org/webaccessibility/index.shtml">
-        Accessibility Guidelines for United Nations Websites</a>.
+        <a href="http://www.un.org/webaccessibility/index.shtml">Accessibility Guidelines for United Nations Websites</a>.
         <!-- @@todo add more details -->
       </li>
     </ul>
+    <!--
+      WCAG 2.0: https://www.w3.org/TR/WCAG20/
+      WCAG 2.0: German translation: https://www.w3.org/Translations/WCAG20-de/
+      WCAG 1.0: https://www.w3.org/TR/WCAG10/
+      WCAG 1.0, German translation: https://w3c.de/Trans/WAI/webinhalt.html
+    -->
 
     <h3>Machine-Readable Guideline Representations</h3>
     <p>Representation of the Web Content Accessibility Guidelines (<abbr>WCAG</abbr>) 2.0
