WebAIM: Screen Reader User Survey #7 Results

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1222,6 +1222,21 @@
         <a href="https://ux.stackexchange.com/q/20704/91974">How to prove to client that blind users can also use his e-commerce website?</a>
         A question posted on User Experience Stack Exchange in April 2012.
       </li>
+      <li>
+        <a href="https://webaim.org/projects/screenreadersurvey7/">Screen Reader User Survey #7 Results</a>,
+        <i class="website">Web<abbr>AIM</abbr></i> (no date).
+        <br >For web developers, some of the most interesting parts of this report are about specific web page features that screen reader users rely on:
+        <a href="https://webaim.org/projects/screenreadersurvey7/#landmarks">landmarks and regions</a> (very variable),
+        <a href="https://webaim.org/projects/screenreadersurvey7/#finding">finding information on a lengthy web page</a> (67.5% navigate such pages using headings),
+        <a href="https://webaim.org/projects/screenreadersurvey7/#heading">heading structures</a> (60% expect <q>one first level heading that contains the document title</q>) and
+        <a href="https://webaim.org/projects/screenreadersurvey7/#skip">skip links</a> (very variable).
+        There is also a list of
+        <a href="https://webaim.org/projects/screenreadersurvey7/#problematic">most problematic items</a>,
+        such as <abbr>CAPTCHA</abbr>, unexpected screen changes, ambiguous links or buttons,
+        inaccessible Flash content (even in 2017), lack of keyboard accessibility,
+        complex or difficult forms, missing or improper text alternatives,
+        and a few other issues.
+      </li>
       <!--@@sign language:-->
       <li>
         <a href="http://www.bik-fuer-alle.de/deutsche-gebaerdensprache-im-internet-umsetzen.html" hreflang="de" lang="de">Deutsche Gebärdensprache im Internet umsetzen</a>,
