Johnson: Comparing 3 Top Automated Accessibility Testing Tools: WAVE, Tenon.io, and Google Lighthouse

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -682,6 +682,10 @@
     <li>The Chromium Project: 
       <a href="https://www.chromium.org/developers/design-documents/accessibility">Accessibility Technical Documentation</a>.
     </li>
+    <li>Johnson, Laura:
+      <a href="https://medium.com/myplanet-musings/comparing-3-top-automated-accessibility-testing-tools-wave-tenon-io-and-google-lighthouse-d3897d7bb311">Comparing 3 Top Automated Accessibility Testing Tools: WAVE, Tenon.io, and Google Lighthouse</a>,
+      <i class="blog">Myplanet on Medium</i>, 24.07.2018.
+    </li>
   </ul>
 
   </main>
