Sonar has apparently been abandoned; move it down.

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -195,17 +195,6 @@
 
     <h2>Specialised Linux Distributions</h2>
     <ul>
-      <li><a href="https://sourceforge.net/projects/sonargnulinux/">Sonar <abbr>GNU</abbr>/Linux</a>:<!--http://sonargnulinux.com/ no longer working 08.01.2018-->
-        a Linux distribution that focuses on assistive technologies.
-        <br />Sonar 2016.03 was part of the 
-        <a href="https://manjaro.github.io/about/">Manjaro</a> build system.
-        It has versions with GNOME and versions with Mate.
-        See 
-        <del><a href="http://sonargnulinux.com/sonar-2016-3-is-out/">Sonar 2016.3 is out!</a> 
-        on the Sonar blog and</del>
-        <a href="https://manjaro.github.io/Sonar-16.03-released/">Sonar 2016.03 released - an accessible OS focused on assistive technology</a> 
-        on the Manjaro website.
-      </li>
       <li><a href="http://vinuxproject.org/">Vinux</a>:
         a Linux distribution based on Ubuntu that is optimised for the needs of blind and partially sighted users.
         <br /><strong>Note</strong>:
@@ -264,6 +253,22 @@
         SpeakUp is available for Debian, Fedora and a few other
         <a href="http://www.linux-speakup.org/distros.html">distributions</a>,
         but it seems that there have been no updates since 2010. 
+      </li>
+      <li><a href="https://sourceforge.net/projects/sonargnulinux/">Sonar <abbr>GNU</abbr>/Linux</a><!--http://sonargnulinux.com/ no longer working 08.01.2018-->
+        was a Linux distribution that focused on assistive technologies.
+        <br />Sonar 2016.03 was part of the
+        <a href="https://manjaro.github.io/about/">Manjaro</a> build system.
+        It had versions with GNOME and versions with Mate.
+        However, the
+        <a href="https://github.com/manjaro/manjaro-tools-iso-profiles-sonar">ISO profiles for Sonar GNU/Linux on GitHub</a>
+        are now deprecated and archived.
+        <!--
+        See
+        <del><a href="http://sonargnulinux.com/sonar-2016-3-is-out/">Sonar 2016.3 is out!</a>
+        on the Sonar blog and</del>
+        <a href="https://manjaro.github.io/Sonar-16.03-released/">Sonar 2016.03 released - an accessible OS focused on assistive technology</a>
+        on the Manjaro website.
+        -->
       </li>
       <li><a href="http://luwrain.org/?lang=en">The accessible environment Luwrain</a>:<!--luwrain.org: now has Russian owner? @@ask http://twitter.com/luwrain-->
         <q>Luwrain is a set of software components on Java for accessible user interface construction.</q>
