Does illogical or non-sequential heading structure fail WCAG 2.0?

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -304,6 +304,12 @@
         <br />This article explains that seven years after the introduction of <abbr>HTML</abbr>5's document outline,
         this mechanism cannot be relied upon due to lack of support in browsers and assistive technologies.
       </li>
+      <li>
+        <a href="http://centreforinclusivedesign.org.au/community/blog/2017/january/02/does-illogical-or-non-sequential-heading-structure-fail-wcag-20/">Does illogical or non-sequential heading structure fail WCAG 2.0?</a>
+        <i class="blog">Centre for Inclusive Design Blog</i>, 02.01.2017.
+        <br />The author finds that
+        <q><abbr>WCAG</abbr> 2.0 does not specify that logical and sequential heading structure is required to comply</q>.
+      </li>
     </ul>
 
     <h2>Images and Other Non-Text Content</h2>
