Add: Foudan: Accessibility Features for Mutter/GNOME Shell on Wayland

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -103,7 +103,11 @@
       <li>The GNOME Project: <strong>
         <a href="https://developer.gnome.org/accessibility-devel-guide/">GNOME Accessibility Developers Guide</a></strong>.
         See also the
-        <a href="https://wiki.gnome.org/Accessibility/IntroATs">Introduction to Assistive Technologies</a>.
+        <a href="https://wiki.gnome.org/Accessibility/IntroATs">Introduction to Assistive Technologies</a>
+        and
+        <a href="https://guadec.ubicast.tv/permalink/v125d0b148681aw5mihz/">Accessibility Features for Mutter/GNOME Shell on Wayland</a>
+        (presentation by Olivier Fourdan at GAUDEC 2019, Thessaloniki, Greece; 22 minutes).
+        <!-- https://blog.elementary.io/elementary-at-guadec-2019/#accessibility-features-for-muttergnome-shell-on-wayland -->
       </li>
       <li><a href="http://mate-desktop.org/">MATE Desktop Environment</a>. 
         <a href="https://en.wikipedia.org/wiki/MATE_%28software%29" title="MATE on Wikipedia">MATE</a> 
