Lieberman: The Accessibility Hat Trick: Getting Abbreviations Right

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -901,6 +901,19 @@
         <a href="http://4syllables.com.au/articles/accessibility-writers-abbreviations/">Abbreviations – accessibility for web writers</a>,
         <i class="website">4 Syllables</i>, 10.11.2011.
       </li>
+      <li>Lieberman, Colin:
+        <a href="https://alistapart.com/article/hattrick">The Accessibility Hat Trick: Getting Abbreviations Right</a>,
+        <i class="website">A List Apart</i>, 17.01.2006.
+        At the time when this article was written, <abbr>WCAG</abbr> 2.0 was not yet a recommendation,
+        <abbr>XHTML</abbr> 2.0 was still under development (and had added the
+        <a href="https://www.w3.org/TR/xhtml2/mod-text.html#adef_text_full"><code>full</code> attribute</a>
+        to the <abbr>abbr</abbr> element) and the
+        <a href="https://www.w3.org/TR/2008/WD-html5-20080122/">first draft of <abbr>HTML</abbr>5</a>
+        had not yet been published.
+        The <code>acronym</code> element, which had already been deprecated in <abbr>XHTML</abbr> 2.0,
+        is listed as a
+        <a href="https://www.w3.org/TR/2017/REC-html52-20171214/obsolete.html#non-conforming-features">non-conforming feature in <abbr>HTML</abbr> 5.2</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
