Add: Hassell: Inclusive Design for Organisations

--- a/designforall.html
+++ b/designforall.html
@@ -91,6 +91,10 @@
         <a href="https://www.interaction-design.org/literature/book/the-encyclopedia-of-human-computer-interaction-2nd-ed/design-4-all">Design for All</a>,
         <i class="booktitle">The Encyclopedia of Human-Computer Interaction, 2nd <abbr>Ed.</abbr></i>.
       </li>
+      <li>Hassell, Jonathan:
+        <i class="booktitle">Inclusive Design for Organisations: Including your missing 20% by embedding web and mobile accessibility</i>.
+        <a href="https://rethinkpress.com/product/inclusive-design-for-organisations-by-professor-jonathan-hassell/">Rethink Press, 2019</a>.
+      </li>
       <li>Aragall, Francesc; Montana, Jordi:
         <i class="booktitle">Universal Design: The HUMBLES Method for User-Centred Business</i>.
         Routledge, 2012. (256 pages)
