Add: Peri: The Anatomy of Accessible Forms: Required Form Fields

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -586,6 +586,10 @@
         For some screen readers, form elements using the <code>required</code> attribute also need the attribute
         <code>aria-invalid="false"</code> in order to prevent screen readers from claiming that the field is &ldquo;invalid&rdquo;.
       </li>
+      <li>Peri, Raghavendra Satish:
+        <a href="https://www.deque.com/blog/anatomy-of-accessible-forms-required-form-fields/">The Anatomy of Accessible Forms: Required Form Fields</a>,
+        <i class="blog">Deque blog</i>, 11.06.2019.
+      </li>
       <li>Faulkner, Steve:
         <a href="https://codepen.io/stevef/post/short-update-on-multiple-labels-for">Short update on multiple labels for </a>,
         <i class="website">steve faulkner on CodePen</i>, 22.08.2019.
