Addl TalkingArch discontinued; succeeded by Tarch

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -149,6 +149,13 @@
         (<a href="http://wiki.alpinelinux.org/wiki/MATE">installation instructions for MATE</a>). 
       </li>
     </ul>
+    <!--Accessibility-related articles etc. for openSUSE:
+      * Bryen Yunashko: "Putting our Accessibility Heads Together", openSUSE News, 06.01.2011: https://news.opensuse.org/2011/01/06/putting-our-accessibility-heads-together-2/
+      * Kostas Koudaras: "GNOME Accessibility Hackfest (interview)", openSUSE News, 07.02.2012: https://news.opensuse.org/2012/02/07/gnome-accesibility-hackfest-interview/
+      * Yast Team: "Improving low-vision accessibility of the installer", openSUSE Lizards, 07.10.2016: https://lizards.opensuse.org/2016/10/07/improving-low-vision-accessibility-of-the-installer/
+        "Nowadays, YaST team is trying to fix a long-standing issue in the installer: low-vision accessibility. In the past, a user could get a high-contrast mode just pressing shift+F4 during installation. Unfortunately, that feature does not work anymore and, to be honest, changing to a high-contrast palette is not enough. Other adjustments, like setting better font sizes, should be taken into account."
+      * gnome-themes-accessibility ["This package contains high-contrast and low-contrast themes for GNOME."]: https://software.opensuse.org/package/gnome-themes-accessibility
+    -->
 
     <h3>Desktop Environments: Information and Tips for Computer Users</h3>
     <ul>
@@ -157,7 +164,7 @@
         guide to GNOME's accessibility features.
       </li>
       <li>KDE UserBase Wiki:
-        <a href="https://userbase.kde.org/Applications/Accessibility">Accessibility</a>:
+        <a href="https://userbase.kde.org/Applications/Accessibility" title="Applications/Accessibility in the KDE UserBase Wiki">Applications/Accessibility</a>:
         guide to accessibility features and tools in KDE.
       </li>
       <li>The
@@ -213,16 +220,25 @@
         is an easy-to-use, talking desktop system with optional support for braille, 
         which can be used entirely without vision oriented output devices.</q>
       </li>
+      <li><a href="https://tarch.org/">Tarch</a>
+        describes itself as <q>the new talking arch live<abbr>cd</abbr> project</q>.
+        Its latest version is Tarch 2019.06.22, released in June 2019.
+      </li>
       <li><a href="https://talkingarch.tk/">TalkingArch</a>:
         <q>a respin of the Arch Linux live iso modified to include speech and braille output for blind and visually impaired users</q>.
-        <br />TalkingArch is a bootable <abbr>CD</abbr> or <abbr>USB</abbr> image optimised for blind users. 
-        The system stars speaking at boot time.
+        <br />TalkingArch is (or was) a bootable <abbr>CD</abbr> or <abbr>USB</abbr> image optimised for blind users.
+        The system started speaking at boot time.
         The latest release dates from October 2017.
         TalkingArch is not an official release of the Arch Linux project.
         See also
         <a href="https://blog.talkingarch.tk/">The TalkingArch Blog</a>
         and the
         <a href="https://wiki.archlinux.org/index.php/TalkingArch">TalkingArch wiki page</a>.
+        According to the
+        <a href="https://wiki.archlinux.org/index.php/TalkingArch" title="TalkingArch in the Arch wiki">Arch wiki</a>,
+        TalkingArch was discontinued in 2017 and was succeeded by
+        <a href="https://tarch.org/">Tarch</a>,
+        <q>the new talking arch livecd project</q>.
       </li>
       <li><a href="https://en.wikipedia.org/wiki/HandyLinux">HandyLinux</a><!--http://handylinux.org/index-en.html redirects to newer site 08.01.2018; https://lescahiersdudebutant.fr/handylinux/ empty on 22.08.2019-->
         was a Debian-based French distribution aimed at beginners, elderly people 
@@ -262,6 +278,7 @@
       </li>
       <li><a href="https://sourceforge.net/projects/sonargnulinux/">Sonar <abbr>GNU</abbr>/Linux</a><!--http://sonargnulinux.com/ no longer working 08.01.2018-->
         was a Linux distribution that focused on assistive technologies.
+        <!-- Katherine Noyes: "New Linux distro would target disabled users", PCWorld, 04.02.2013: https://www.pcworld.com/article/2027129/new-linux-distro-will-target-disabled-users.html -->
         <br />Sonar 2016.03 was part of the
         <a href="https://manjaro.github.io/about/">Manjaro</a> build system.
         It had versions with GNOME and versions with Mate.
