Add: Vinux is a dormant project

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -213,6 +213,8 @@
         <br /><strong>Note</strong>:
         It is possible that Sonar and Vinux will merge and use Fedora as their starting point<!-- J-P Mengual, 25.02.2017 -->;
         that was the outcome of a <a href="http://wiki.vinuxproject.org/sonar_merges_with_vinux">meeting in early 2017</a>.
+        <br />According to DistroWatch,
+        <a href="https://www.distrowatch.com/table.php?distribution=vinux">Vinux is a dormant project</a>.
       </li>
       <li><a href="http://www.knopper.net/knoppix-adriane/index-en.html">
         <abbr>ADRIANE</abbr> - Audio Desktop Reference Implementation and Networking Environment</a>:
