Add: KDE Community Wiki: Accessibility

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -163,6 +163,9 @@
         <a href="https://help.gnome.org/users/gnome-help/stable/a11y.html">Universal Access</a>: 
         guide to GNOME's accessibility features.
       </li>
+      <li>KDE Community Wiki:
+        <a href="https://community.kde.org/Accessibility" title="Accessibility in the KDE Community Wiki">Accessibility</a>.
+      </li>
       <li>KDE UserBase Wiki:
         <a href="https://userbase.kde.org/Applications/Accessibility" title="Applications/Accessibility in the KDE UserBase Wiki">Applications/Accessibility</a>:
         guide to accessibility features and tools in KDE.
