Add: De La Rue & Snider: Linux Accessibility HOWTO

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -96,6 +96,10 @@
       <li><a href="https://debian-facile.org/utilisateurs:ideefixe:tutos:accessibilite-des-logiciels-libres" hreflang="fr" lang="fr">Accessibilité des logiciels libres</a>:
         article on the wiki of the <span lang="fr">Debian Facile</span> project.
       </li>
+      <li>De La Rue, Michael; Snider, Sharon:
+        <a href="http://tldp.org/HOWTO/Accessibility-HOWTO/">Linux Accessibility HOWTO</a>.
+        Version 3.1 of this guide was published in June 2002; the document has not been updated since that time and is outdated.
+      </li>
     </ul>
 
     <h2>Desktop Environments</h2>
