Add: Grigsby: An HTML attribute potentially worth ...

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -599,6 +599,10 @@
         As an alternative to using multiple labels, you can wrap the <code>label</code> element around the form control
         or use the <code>aria-labelledby</code> attribute.
       </li>
+      <li>Grigsby, Jason:
+        <a href="https://cloudfour.com/thinks/an-html-attribute-potentially-worth-4-4m-to-chipotle/">An <abbr>HTML</abbr> attribute potentially worth $4.4M to Chipotle</a>,
+        <i class="blog">Cloud Four</i>, 19.09.2019.
+      </li>
     </ul>
 
     <h2 id="captcha"><abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart">CAPTCHA</abbr></h2>
