--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -955,6 +955,10 @@
         <a href="https://www.bmas.de/DE/Service/Medien/Publikationen/a752-leichte-sprache-ratgeber.html" hreflang="de">Leichte Sprache - Ein Ratgeber</a>
         (April 2014)</span>.<!--@@download-->
       </li>
+      <li><span lang="de">Kellermann, Gudrun:
+        <a href="http://www.bpb.de/apuz/179341/leichte-und-einfache-sprache-versuch-einer-definition" hreflang="de">Leichte und Einfache Sprache – Versuch einer Definition</a>,
+        <i class="website">Bundeszentrale für politische Bildung</i></span>, 19.02.2014.
+      </li>
       <!--@@ https://german.stackexchange.com/questions/32312/equivalent-of-globish-in-german -->
       <!--@@ http://kiw.hs-merseburg.de/index.php/2018/04/06/barrierefreie-typografie-mobil-eine-app-fuer-barrierefreies-design/ -->
     </ul>
