Add: European Easy-to-Read Guidelines

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -961,6 +961,9 @@
       </li>
       <!--@@ https://german.stackexchange.com/questions/32312/equivalent-of-globish-in-german -->
       <!--@@ http://kiw.hs-merseburg.de/index.php/2018/04/06/barrierefreie-typografie-mobil-eine-app-fuer-barrierefreies-design/ -->
+      <li>
+        <a href="https://easy-to-read.eu/">Easy-to-Read: European Easy-to-Read Guidelines</a>.
+      </li>
     </ul>
 
     <h2>Web Design for Dyslexia</h2>
