--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1350,6 +1350,10 @@
         <a href="https://webaim.org/blog/screen-readers-and-css/">Screen Readers and <abbr>CSS</abbr>: Are We Going Out of Style (and into Content)?</a>,
         <i class="blog">Web<abbr>AIM</abbr> blog</i>, 28.08.2017.
       </li>
+      <li>
+        <a href="https://www.powermapper.com/tests/screen-readers/content/css-generated-content/"><abbr>CSS</abbr> <abbr>content:</abbr> property: Screen reader compatibility</a>,
+        <i class="website">PowerMapper</i>, 20.05.2018.
+      </li>
     </ul>
 
   </main>
