--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -197,13 +197,13 @@
       </li>
       <li>
         <a href="https://www.youtube.com/watch?v=JnXHgtRKVnk">Blind Accessibility of Debian / XFCE - Random Access Review Ep6</a>
-        (TheFake<abbr>VIP</abbr> on YouTube, 9 minutes, 02.07.2019).
+        (<i class="ytchannel">TheFake<abbr>VIP</abbr></i> on YouTube, 9 minutes, 02.07.2019).
         This video reviews features such as Orca (Xfce's file mananger Thunar is not accessible with Orca),
         high contrast (white on black), the whisker menu (the search box is accessible),
       </li>
       <li>Hartley, Matt:
         <a href="https://www.youtube.com/watch?v=ra_-WcdT3aM">Linux Accessibility For The Visually Impaired - For The Record</a>
-        (Matt Hartley on YouTube, 22 minutes, 17.09.2018).
+        (<i class="ytchannel">Matt Hartley</i> on YouTube, 22 minutes, 17.09.2018).
         This video is a reesponse to a question from a visually impaired user who wanted to know whether
         there is a version of Linux that would allow one to listen to highlighted text and
         that would allow one to dictate text in English and Spanish.
