Add class .ytchannel (YouTube)

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -256,7 +256,7 @@
       </li>
       <li>Millard, Adam:
         <a href="https://www.youtube.com/watch?v=aZ9-PHbiEvs">Should Games Always Be Accessible?</a>
-        (Adam Millard - The Architect of Games on YouTube, 14 minutes, 21.05.2018).
+        (<i class="ytchannel">Adam Millard - The Architect of Games</i> on YouTube, 14 minutes, 21.05.2018).
         <br />Millard defines accessibility as follows:
         <q cite="https://youtu.be/aZ9-PHbiEvs?t=37s">Accessibility is how easy a game is to engage with either on a physical
           or mental level: how easy it is to understand, how easy it is to translate what you want to do into the game,
@@ -268,11 +268,11 @@
       </li>
       <li>Brown, Mark:
         <a href="https://www.youtube.com/watch?v=4NGe4dzlukc">Making Games Better for the Deaf and Hard of Hearing | Designing for Disability</a>
-        (Mark Brown on YouTube, 13 minutes, 16.07.2018).
+        (<i class="ytchannel">Mark Brown</i> on YouTube, 13 minutes, 16.07.2018).
       </li>
       <li>Brown, Mark:
         <a href="https://www.youtube.com/watch?v=xrqdU4cZaLw">Making Games Better for Gamers with Colourblindness &amp; Low Vision | Designing for Disability</a>
-        (Mark Brown on YouTube, 14 minutes, 22.08.2018).
+        (<i class="ytchannel">Mark Brown</i> on YouTube, 14 minutes, 22.08.2018).
       </li>
       <li>
         <a href="https://docs.microsoft.com/en-us/windows/uwp/gaming/accessibility-for-games">Making games accessible</a>,
