Add: Lindberg: Best Practices for Prototyping Keyboard Accessibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1180,6 +1180,10 @@
         <a href="https://knowbility.org/blog/2018/keyboard-testing-basics/">Keyboard Testing Basics</a>,
         <i class="blog">Knowbility Blog</i>, 06.11.2018.
       </li>
+      <li>Lindberg, Oliver:
+        <a href="https://theblog.adobe.com/best-practices-for-prototyping-keyboard-accessibility/">Best Practices for Prototyping Keyboard Accessibility</a>,
+        <i class="blog">Adobe Blog</i>, 24.07.2019.
+      </li>
       <li>Head, Val:
         <a href="https://alistapart.com/article/designing-safer-web-animation-for-motion-sensitivity">Designing Safer Web Animation For Motion Sensitivity</a>,
         <i class="website">A List Apart</i>, 08.09.2015.
