Add: Ruh: Should Accessibility Overlay Tools Be Used as a Strategic Part of your Accessibility Efforts

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1187,6 +1187,32 @@
             is available on GitHub. The GitHub repository also contains a
             <a href="https://github.com/karlgroves/overlaysdontwork/blob/master/wishlist.md">wishlist of ideas that other can contribute</a>.
           </li>
+          <li>Ruh, Debra:
+            <a href="https://www.huffingtonpost.com/debra-ruh/should-accessibility-over_b_8900720.html">Should Accessibility Overlay Tools Be Used as a Strategic Part of your Accessibility Efforts</a>,
+            <i class="newspaper">Huffington Post</i>, 04.01.2016.
+            <p>Debra Ruh writes that some overlay tools <q>appear to have become robust enough to become part of an organizations accessibility roadmap and plan.</q>
+            However, the article appears to lump together two types of web-based tools: on the one hand, widgets that can be embedded into websites
+            in order to provide users with tools that change certain characteristics of a website (font size, contrast, etcetra), and
+            developer tools on the other hand.
+            <br />sitecues is
+            <q cite="https://www.zoomtext.com/press/directemployers-and-sitecues-partner-to-provide-enhanced-site-accessibility-to-job-seekers-with-disabilities/">a <abbr title="software as a service">SaaS</abbr> accessibility product that builds zoom and speech capabilities right into websites, so people with low vision other visual and print difficulties can more easily see and hear content</q>.
+            <!--Accessed 30.08.2018, 13.02.2019-->
+            This sounds much more modest than Debra Ruh's description of sitecues as
+            <q>a software-as-a-service technology that can make any website more accessible and usable</q>.
+            <br /><a href="https://www.levelaccess.com/solutions/software/access-alchemy/">Access Alchemy</a> can be used as a test and repair tool
+            by web content authors; as Level Access writes under the heading &ldquo;Don’t bug the dev team&rdquo;,
+            <q cite="https://www.levelaccess.com/solutions/software/access-alchemy/">Fix the most common and high-priority issues with no changes to source code, page functionality, appearance, or load time. Repairs can now be done by any web-savvy member of your team, regardless of whether they can read or write code.</q>
+            <!--Accessed 13.02.2018-->Access Alchemy is clearly not an overlay tool for end users.
+            <br />In August 2018, <a href="https://www.user1st.com/">User1st's offer</a> consisted of a
+            tool for users, <a href="https://user1st.com/uremediate/">uRemediate</a>,
+            and two tools for the website owner or developer, namely,
+            <a href="https://user1st.com/utester/">uTester</a> and
+            <a href="https://user1st.com/umonitor/">uMonitor</a>.
+            This offer has changed since then.
+            <br />Debra Ruh does not mention that most accessibility issues cannot be detected, let alone repaired, by automated tools,
+            although she should be aware of this.
+            </p>
+          </li>
         </ul>
       </li>
     </ul>
