Add: Able to Include''s accessibility-layer

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1213,6 +1213,9 @@
             although she should be aware of this.
             </p>
           </li>
+          <li>
+            <a href="https://github.com/able-to-include/accessibility-layer">Able to Include's accessibility-layer</a>.
+          </li>
         </ul>
       </li>
     </ul>
